--- a/Python_SQL_2.ipynb
+++ b/Python_SQL_2.ipynb
@@ -26,11 +26,33 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Enter unique ID number: 1\n",
+      "Enter the First name: Mark\n",
+      "Enter the Surname: Campbell\n",
+      "Enter the Email: markcampbell@ada.ac.uk\n"
+     ]
+    }
+   ],
    "source": [
-    "# Answer to question 1 here"
+    "# Answer to question 1 here\n",
+    "import sqlite3\n",
+    "with sqlite3.connect(\"email_addresses\") as db:\n",
+    "    cursor = db.cursor()\n",
+    "cursor.execute(\"\"\"CREATE TABLE IF NOT EXISTS email_addresses(ID integer PRIMARY KEY, \n",
+    "FirstName text NOT NULL, Surname text NOT NULL, email text);\"\"\")\n",
+    "newID = input(\"Enter unique ID number: \")\n",
+    "newName = input(\"Enter the First name: \")\n",
+    "newSurname = input(\"Enter the Surname: \")\n",
+    "newEmail = input(\"Enter the Email: \")\n",
+    "cursor.execute((\"\"\"INSERT INTO pet VALUES(?,?,?,?)\"\"\"),(newID, newName, newSurname, newEmail))\n",
+    "db.commit()"
    ]
   },
   {
@@ -65,12 +87,60 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "raw",
    "metadata": {},
-   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Enter unique ID number: 7\n",
+      "enter the name of the author6\n",
+      "enter the unique ID number1\n",
+      "enter the title1\n",
+      "the place the author was born1\n",
+      "enter the year the book was made1\n",
+      "enter the name of the author1\n"
+     ]
+    },
+    {
+     "ename": "OperationalError",
+     "evalue": "table authors has 2 columns but 3 values were supplied",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mOperationalError\u001b[0m                          Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-17-9db9699759d4>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m     16\u001b[0m \u001b[0mcursor\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mexecute\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m\"\"\"INSERT INTO books VALUES(?,?,?)\"\"\"\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mnewID\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mnewtitle\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mnewyear\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     17\u001b[0m \u001b[0mdb\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mcommit\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 18\u001b[0;31m \u001b[0mcursor\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mexecute\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m\"\"\"INSERT INTO authors VALUES(?,?,?)\"\"\"\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mnewauthorID\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mnewauthor\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mnewbp\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     19\u001b[0m \u001b[0mdb\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mcommit\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mOperationalError\u001b[0m: table authors has 2 columns but 3 values were supplied"
+     ]
+    }
+   ],
    "source": [
-    "# Answer to question 2 here"
+    "# Answer to question 2 here\n",
+    "import sqlite3\n",
+    "with sqlite3.connect(\"BookInfo\") as db:\n",
+    "    cursor = db.cursor()\n",
+    "\n",
+    "cursor.execute(\"\"\"CREATE TABLE IF NOT EXISTS authors(Name text NOT NULL PRIMARY KEY,Place of Birth text NOT NULL);\"\"\")\n",
+    "\n",
+    "cursor.execute(\"\"\"CREATE TABLE IF NOT EXISTS books(ID integer PRIMARY KEY, Title text NOT NULL, YearPublished INTEGER NOT NULL);\"\"\")\n",
+    "newID = input(\"Enter unique ID number: \")\n",
+    "newauthor= input(\"enter the name of the author\")\n",
+    "newauthorID = input(\"enter the unique ID number\")\n",
+    "newtitle = input(\"enter the title\")\n",
+    "newbp = input(\"the place the author was born\")\n",
+    "newyear =input(\"enter the year the book was made\")\n",
+    "newauthor = input(\"enter the name of the author\")\n",
+    "cursor.execute((\"\"\"INSERT INTO books VALUES(?,?,?)\"\"\"),(newID, newtitle, newyear))\n",
+    "db.commit()\n",
+    "cursor.execute((\"\"\"INSERT INTO authors VALUES(?,?,?)\"\"\"),(newauthorID, newauthor, newbp))\n",
+    "db.commit()"
    ]
   },
   {
@@ -82,11 +152,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Answer to question 3 here"
+    "# Answer to question 3 here\n",
+    "SELECT * FROM authors\n",
+    "pb = input(\"where were you born\")\n",
+    "SELECT * FROM books WHERE newbp = pb\n"
    ]
   },
   {
@@ -104,6 +177,30 @@
    "source": [
     "# Answer to question 4 here"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "year = input(\"waht year do you want\")\n",
+    "SELECT * FROM BookInfo WHERE newyear = year"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
