--- a/Python_SQL_2.ipynb
+++ b/Python_SQL_2.ipynb
@@ -56,10 +56,10 @@
    ]
   },
   {
-   "cell_type": "markdown",
+   "cell_type": "raw",
    "metadata": {},
    "source": [
-    "**2)** Create a new SQL database called BookInfo that will store a list of authors and the books they wrtoe. It will have two tables. The first one should be called **authors** and contain the following data:\n",
+    "# **2)** Create a new SQL database called BookInfo that will store a list of authors and the books they wrtoe. It will have two tables. The first one should be called **authors** and contain the following data:\n",
     "\n",
     "| Name                | BirthPlace     |\n",
     "|---------------------|----------------|\n",
@@ -93,31 +93,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Enter unique ID number: 7\n",
-      "enter the name of the author6\n",
-      "enter the unique ID number1\n",
-      "enter the title1\n",
-      "the place the author was born1\n",
-      "enter the year the book was made1\n",
-      "enter the name of the author1\n"
-     ]
-    },
-    {
-     "ename": "OperationalError",
-     "evalue": "table authors has 2 columns but 3 values were supplied",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mOperationalError\u001b[0m                          Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-17-9db9699759d4>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m     16\u001b[0m \u001b[0mcursor\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mexecute\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m\"\"\"INSERT INTO books VALUES(?,?,?)\"\"\"\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mnewID\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mnewtitle\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mnewyear\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     17\u001b[0m \u001b[0mdb\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mcommit\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 18\u001b[0;31m \u001b[0mcursor\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mexecute\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m\"\"\"INSERT INTO authors VALUES(?,?,?)\"\"\"\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mnewauthorID\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mnewauthor\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mnewbp\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     19\u001b[0m \u001b[0mdb\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mcommit\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;31mOperationalError\u001b[0m: table authors has 2 columns but 3 values were supplied"
+      "Enter unique ID number of the book : 999\n",
+      "enter the name of the author12\n",
+      "enter the title12\n",
+      "the place the author was born12\n",
+      "enter the year the book was made12\n",
+      "enter the name of the author12\n"
      ]
     }
    ],
@@ -127,19 +115,18 @@
     "with sqlite3.connect(\"BookInfo\") as db:\n",
     "    cursor = db.cursor()\n",
     "\n",
-    "cursor.execute(\"\"\"CREATE TABLE IF NOT EXISTS authors(Name text NOT NULL PRIMARY KEY,Place of Birth text NOT NULL);\"\"\")\n",
+    "cursor.execute(\"\"\"CREATE TABLE IF NOT EXISTS authors(Name text NOT NULL PRIMARY KEY,PlaceofBirth text NOT NULL);\"\"\")\n",
     "\n",
-    "cursor.execute(\"\"\"CREATE TABLE IF NOT EXISTS books(ID integer PRIMARY KEY, Title text NOT NULL, YearPublished INTEGER NOT NULL);\"\"\")\n",
-    "newID = input(\"Enter unique ID number: \")\n",
+    "cursor.execute(\"\"\"CREATE TABLE IF NOT EXISTS books(ID integer PRIMARY KEY UNIQUE, Title text NOT NULL, YearPublished INTEGER NOT NULL);\"\"\")\n",
+    "newID = input(\"Enter unique ID number of the book : \")\n",
     "newauthor= input(\"enter the name of the author\")\n",
-    "newauthorID = input(\"enter the unique ID number\")\n",
     "newtitle = input(\"enter the title\")\n",
     "newbp = input(\"the place the author was born\")\n",
     "newyear =input(\"enter the year the book was made\")\n",
     "newauthor = input(\"enter the name of the author\")\n",
     "cursor.execute((\"\"\"INSERT INTO books VALUES(?,?,?)\"\"\"),(newID, newtitle, newyear))\n",
     "db.commit()\n",
-    "cursor.execute((\"\"\"INSERT INTO authors VALUES(?,?,?)\"\"\"),(newauthorID, newauthor, newbp))\n",
+    "cursor.execute((\"\"\"INSERT INTO authors VALUES(?,?)\"\"\"),( newauthor, newbp))\n",
     "db.commit()"
    ]
   },
@@ -152,21 +139,42 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "where were you born1\n"
+     ]
+    },
+    {
+     "ename": "OperationalError",
+     "evalue": "no such column: PlaceofBirth",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mOperationalError\u001b[0m                          Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-12-e3d7b8b7f70c>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m      2\u001b[0m \u001b[0mcursor\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mexecute\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m\"SELECT * from authors\"\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      3\u001b[0m \u001b[0mpb\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0minput\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m\"where were you born\"\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 4\u001b[0;31m \u001b[0mcursor\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mexecute\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m\"SELECT * from books where PlaceofBirth=?\"\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mpb\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      5\u001b[0m \u001b[0;32mfor\u001b[0m \u001b[0mx\u001b[0m \u001b[0;32min\u001b[0m \u001b[0mcursor\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mfetchall\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      6\u001b[0m     \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mx\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mOperationalError\u001b[0m: no such column: PlaceofBirth"
+     ]
+    }
+   ],
    "source": [
-    "# Answer to question 3 here\n",
-    "SELECT * FROM authors\n",
+    "## Answer to question 3 here\n",
+    "cursor.execute(\"SELECT * from authors\")\n",
     "pb = input(\"where were you born\")\n",
-    "SELECT * FROM books WHERE newbp = pb\n"
+    "cursor.execute(\"SELECT * from books where PlaceofBirth=?\",[pb])\n",
+    "for x in cursor.fetchall():\n",
+    "    print(x)"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "**4)** Using the BookInfo database, ask the user to enter a year and display all the books published after that year, sorted by the year they were published."
+    "## **4)** Using the BookInfo database, ask the user to enter a year and display all the books published after that year, sorted by the year they were published."
    ]
   },
   {
@@ -180,12 +188,33 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "what year do you want1999\n"
+     ]
+    },
+    {
+     "ename": "OperationalError",
+     "evalue": "no such table: BookInfo",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mOperationalError\u001b[0m                          Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-6-949a5586ba8b>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[0myear\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0minput\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m\"what year do you want\"\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 2\u001b[0;31m \u001b[0mcursor\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mexecute\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m\"SELECT * from BookInfo where newbp=?\"\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0myear\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      3\u001b[0m \u001b[0;32mfor\u001b[0m \u001b[0mx\u001b[0m \u001b[0;32min\u001b[0m \u001b[0mcursor\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mfetchall\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      4\u001b[0m     \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mx\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mOperationalError\u001b[0m: no such table: BookInfo"
+     ]
+    }
+   ],
    "source": [
-    "year = input(\"waht year do you want\")\n",
-    "SELECT * FROM BookInfo WHERE newyear = year"
+    "year = input(\"what year do you want\")\n",
+    "cursor.execute(\"SELECT * from BookInfo where newbp=?\",[year])\n",
+    "for x in cursor.fetchall():\n",
+    "    print(x)"
    ]
   },
   {
