--- a/Python_SQL_2.ipynb
+++ b/Python_SQL_2.ipynb
@@ -56,10 +56,10 @@
    ]
   },
   {
-   "cell_type": "raw",
+   "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# **2)** Create a new SQL database called BookInfo that will store a list of authors and the books they wrtoe. It will have two tables. The first one should be called **authors** and contain the following data:\n",
+    "**2)** Create a new SQL database called BookInfo that will store a list of authors and the books they wrtoe. It will have two tables. The first one should be called **authors** and contain the following data:\n",
     "\n",
     "| Name                | BirthPlace     |\n",
     "|---------------------|----------------|\n",
@@ -93,40 +93,49 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Answer to question 2 here\n",
+    "import sqlite3\n",
+    "with sqlite3.connect(\"BookInfo\") as db:\n",
+    "    cursor = db.cursor()\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "newauthor= input(\"enter the name of the author\")\n",
+    "newbp = input(\"the place the author was born\")\n",
+    "newauthor = input(\"enter the name of the author\")\n",
+    "cursor.execute((\"\"\"INSERT INTO authors VALUES(?,?)\"\"\"),( newauthor, newbp))\n",
+    "db.commit()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Enter unique ID number of the book : 999\n",
-      "enter the name of the author12\n",
-      "enter the title12\n",
-      "the place the author was born12\n",
-      "enter the year the book was made12\n",
-      "enter the name of the author12\n"
+      "Enter unique ID number of the book : 34\n",
+      "enter the titleThe Claw\n",
+      "enter the year the book was made1983\n"
      ]
     }
    ],
    "source": [
-    "# Answer to question 2 here\n",
-    "import sqlite3\n",
-    "with sqlite3.connect(\"BookInfo\") as db:\n",
-    "    cursor = db.cursor()\n",
-    "\n",
-    "cursor.execute(\"\"\"CREATE TABLE IF NOT EXISTS authors(Name text NOT NULL PRIMARY KEY,PlaceofBirth text NOT NULL);\"\"\")\n",
-    "\n",
-    "cursor.execute(\"\"\"CREATE TABLE IF NOT EXISTS books(ID integer PRIMARY KEY UNIQUE, Title text NOT NULL, YearPublished INTEGER NOT NULL);\"\"\")\n",
     "newID = input(\"Enter unique ID number of the book : \")\n",
-    "newauthor= input(\"enter the name of the author\")\n",
     "newtitle = input(\"enter the title\")\n",
-    "newbp = input(\"the place the author was born\")\n",
     "newyear =input(\"enter the year the book was made\")\n",
-    "newauthor = input(\"enter the name of the author\")\n",
     "cursor.execute((\"\"\"INSERT INTO books VALUES(?,?,?)\"\"\"),(newID, newtitle, newyear))\n",
-    "db.commit()\n",
-    "cursor.execute((\"\"\"INSERT INTO authors VALUES(?,?)\"\"\"),( newauthor, newbp))\n",
     "db.commit()"
    ]
   },
@@ -139,33 +148,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "where were you born1\n"
-     ]
-    },
-    {
-     "ename": "OperationalError",
-     "evalue": "no such column: PlaceofBirth",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mOperationalError\u001b[0m                          Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-12-e3d7b8b7f70c>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m      2\u001b[0m \u001b[0mcursor\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mexecute\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m\"SELECT * from authors\"\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      3\u001b[0m \u001b[0mpb\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0minput\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m\"where were you born\"\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 4\u001b[0;31m \u001b[0mcursor\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mexecute\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m\"SELECT * from books where PlaceofBirth=?\"\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mpb\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      5\u001b[0m \u001b[0;32mfor\u001b[0m \u001b[0mx\u001b[0m \u001b[0;32min\u001b[0m \u001b[0mcursor\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mfetchall\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      6\u001b[0m     \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mx\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;31mOperationalError\u001b[0m: no such column: PlaceofBirth"
+      "where was the author born? 1\n"
      ]
     }
    ],
    "source": [
     "## Answer to question 3 here\n",
-    "cursor.execute(\"SELECT * from authors\")\n",
-    "pb = input(\"where were you born\")\n",
-    "cursor.execute(\"SELECT * from books where PlaceofBirth=?\",[pb])\n",
+    "pb = input(\"where was the author born? \")\n",
+    "cursor.execute(\"SELECT * from authors where 'Place of Birth'=?\",[pb])\n",
     "for x in cursor.fetchall():\n",
     "    print(x)"
    ]
@@ -195,24 +192,14 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "what year do you want1999\n"
-     ]
-    },
-    {
-     "ename": "OperationalError",
-     "evalue": "no such table: BookInfo",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mOperationalError\u001b[0m                          Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-6-949a5586ba8b>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[0myear\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0minput\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m\"what year do you want\"\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 2\u001b[0;31m \u001b[0mcursor\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mexecute\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m\"SELECT * from BookInfo where newbp=?\"\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0myear\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      3\u001b[0m \u001b[0;32mfor\u001b[0m \u001b[0mx\u001b[0m \u001b[0;32min\u001b[0m \u001b[0mcursor\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mfetchall\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      4\u001b[0m     \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mx\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;31mOperationalError\u001b[0m: no such table: BookInfo"
+      "what year do you want1983\n",
+      "(34, 'The Claw', 1983)\n"
      ]
     }
    ],
    "source": [
     "year = input(\"what year do you want\")\n",
-    "cursor.execute(\"SELECT * from BookInfo where newbp=?\",[year])\n",
+    "cursor.execute(\"SELECT * from books where Yearpublished=?\",[year])\n",
     "for x in cursor.fetchall():\n",
     "    print(x)"
    ]
